chore: cleanup, .gitignore, README; tests green (38 passed)

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,27 @@
+__pycache__/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.venv/
+venv/
+env/
+*.pyc
+*.pyo
+*.pyd
+*.DS_Store
+*.egg-info/
+.coverage
+htmlcov/
+reports/
+coverage.xml
+junit.xml
+.idea/
+.vscode/
+*.log
+app/static/uploads/*
+!app/static/uploads/.gitkeep
 .env
+*.sqlite3.env
 __pycache__/
 *.pyc
 .pytest_cache/
